@@ -1,8 +1,7 @@
 include $(top_srcdir)/Makefile.decl
 
-noinst_PROGRAMS = $(TEST_SETUP) $(TEST_PROGS)
+noinst_PROGRAMS = $(TEST_PROGS)
 
-TEST_SETUP  = $(generated_files)
 TEST_PROGS += tracker-metadata-utils
 
 INCLUDES = 								\
@@ -24,14 +23,7 @@ generated_files =							\
 	tracker-marshal.c						\
 	tracker-marshal.h
 
-tracker-indexer-glue.h:
-	ln -sf $(top_srcdir)/src/tracker-indexer/$@ $@
-
-tracker-marshal.h:
-	ln -sf $(top_srcdir)/src/tracker-indexer/$@ $@
-
-tracker-marshal.c:
-	ln -sf $(top_srcdir)/src/tracker-indexer/$@ $@
+BUILT_SOURCES = $(generated_files)
 
 CLEANFILES = $(generated_files)
 
